packages/portal-style/src/pages/_community-home.scss
.dp-po-community-row {
  $self: '.dp-po-community-row';

  &-list {
    margin: 0;
    padding: 0;
  }

  &-item {
    list-style: none;
    display: flex;
    align-items: center;
    background: $white;
    border-radius: 10px;
    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
    margin-top: 50px;

    &-nocover {
      border: 2px solid transparent;

      #{$self}-left {
        &:after {
          display: none;
        }
      }

      #{$self}-title,
      #{$self}-description {
        color: $grey-darkest;
      }

      #{$self}-btn {
        color: $brand-primary;
        border-color: $brand-primary;
      }

      &:hover {
        border-color: $brand-primary;
      }
    }
  }

  &-left {
    flex: 0 0 60%;
    position: relative;
    padding: 30px;
    background-size: cover;
    background-position: center;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    border-right: 1px solid $grey-light;

    &:after {
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      background: radial-gradient(50% 114.51% at 50% 0%, #FFFFFF 0%, rgba(0, 0, 0, 0.99) 100%);
      mix-blend-mode: multiply;
      opacity: 0.4;
      border-top-left-radius: 10px;
      border-bottom-left-radius: 10px;
    }
  }

  &-right {
    flex: 0 0 40%;
    padding: 30px;
    overflow: hidden;
  }

  &-icon {
    position: absolute;
    left: 20px;
    top: -40px;
    background: $purple-light;
    width: 80px;
    height: 80px;
    border-radius: 50%;
    align-items: center;
    display: flex;
    justify-content: center;
    z-index: 1;

    .dp-po-icon {
      font-size: 40px;

      img {
        max-width: 48px;
        max-height: 48px;
      }
    }

    &-purple {
      background: $purple;
    }

    &-neutral {
      background: $neutral;
    }

    &-warning {
      background: $warning;
    }

    &-success {
      background: $success;
    }

    &-pink {
      background: $pink;
    }

    &-danger {
      background: $danger;
    }
  }

  &-title {
    font-size: $s36;
    position: relative;
    color: $white;
    z-index: 1;
    padding-top: 70px;
    margin: 0 0 20px;
  }

  &-description {
    position: relative;
    color: $white;
    z-index: 1;
    margin: 0;
    width: 70%;
    line-height: 1.5;
    display: inline-block;
    vertical-align: bottom;
  }

  &-btn {
    position: relative;
    color: $white;
    z-index: 1;
    font-size: $s14;
    font-weight: 600;
    border: 1.5px solid $white;
    border-radius: 2px;
    padding: 10px 20px;
    vertical-align: bottom;
    float: right;
    margin-top: 10px;

    &:hover {
      background: $brand-primary;
      text-decoration: none;
      color: $white;
      border-color: $brand-primary;
    }
  }

  &-activity {
    &-heading {
      font-size: $s19;
      margin: 0 0 15px;
    }

    &-list {
      margin: 0;
      padding: 0;
    }

    &-item {
      list-style: none;
      margin-bottom: 10px;

      &:last-child {
        margin: 0;
      }
    }

    &-link {
      display: flex;
      align-items: center;
      color: $grey-darkest;

      &:hover {
        text-decoration: none;

        #{$self}-activity {
          &-title {
            text-decoration: underline;
          }
        }
      }
    }

    &-title {
      font-size: $s17;
      margin: 0;
      display: block;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
    }

    &-img {
      width: 30px;
      margin-right: 10px;
    }

    &-time {
      color: $grey-dark;
      @include typo($s17, 400, 'head');
      white-space: nowrap;
      margin-left: 10px;
    }
  }
}

.dp-po-community-create {
  text-align: right;

  &-link {
    display: flex;
    align-items: center;
    background: $white;
    border: 1px solid $brand-primary;
    border-radius: 4px;
    @include typo($s23, 400, 'head');
    padding: 8px 20px;
    margin-bottom: 25px;

    .dp-po-icon {
      margin-right: 10px;
      font-size: 20px;
    }

    &:hover {
      text-decoration: none;
      background: $brand-primary;
      color: $white;

      .dp-po-icon {
        svg {

          .fa-primary,
          .fa-secondary {
            fill: $white;
          }
        }
      }
    }
  }
}

.dp-po-community-directory {
  display: flex;
  justify-content: flex-end;

  &-link {
    @include typo($s19, 400, 'head');
    display: flex;
    align-items: center;
    text-decoration: none;
    color: $grey-darkest;
    position: relative;
    margin: 7px 0 0;

    &:hover {
      text-decoration: none;
    }

    &:after {
      content: '';
      width: 1px;
      height: 100%;
      position: absolute;
      right: -35px;
      top: 0;
      background: $grey;
    }
  }

  &-svg {
    width: 25px;
    margin-right: 10px;
  }
}

